--- a/pages/dairy/index.wxml
+++ b/pages/dairy/index.wxml
@@ -1,12 +1,26 @@
 <view class="wrapper">
-	<view class="flex">
-		<view class="flex-item flex" wx:for="{{pages}}" wx:key="id" wx:for-index="idx" wx:for-item="page">
-			<view></view>
-			<view class="img">
-				<image src="{{page.post.url}}"  data-objectId="{{page.objectId}}" catch:tap='enter_detail'/>
-			</view>
-			<view class="txt">[{{page.author}}]{{page.section}}</view>
-		</view>
-	</view>
+    <block wx:if="{{pages.length>0}}">
+        <view class="title">我的日志</view>
+        <view class="flex">
+            <view class="flex-item {{idx%3==0||idx%3==1?'mr-25':''}}" wx:for="{{pages}}" wx:key="id" wx:for-index="idx" wx:for-item="page">
+                <view class="img">
+                    <image src="{{page.post.url}}"  data-objectId="{{page.objectId}}" lazy-load="true" catch:tap='enter_detail'/>
+                </view>
+                <view class="txt">[{{page.author}}]{{page.section}}</view>
+            </view>
+        </view>
+    </block>
+    <block wx:elif="{{flag}}">
+        <view class="none">
+        <view class="none-top">
+            <image class="none-img" src="/images/diary/no_diary.png" />
+                <view class="none-txt">一个都没有</view>
+            </view>
+            <view class="none-btn">
+                <button class="weui-btn" type="default" plain="true">新建</button>
+            </view>
+        </view>
+    </block>
+   
 </view>
 
