--- a/pages/dairy/index.wxss
+++ b/pages/dairy/index.wxss
@@ -3,7 +3,7 @@ page{
 }
 
 .wrapper {
-    padding: 50rpx 30rpx;
+    padding: 50rpx 50rpx;
 }
 
 
@@ -34,6 +34,7 @@ page{
 .title {
     font-size: 50rpx;
     margin-bottom: 30rpx;
+    color: #333;
 }
 
 .flex {
@@ -42,15 +43,15 @@ page{
 }
 .flex-item {
     position: relative;
-    width: 33.33%;
-    /*text-align: center;*/
-    justify-content: center;
+    width: 200rpx;
+    justify-content: flex-start;
 }
+
 .flex-item::after {
     content: '';
     position: absolute;
     top: 20rpx;
-    right: 18rpx;
+    right: 12rpx;
     z-index: -1;
     width: 140rpx;
     height: 140rpx;
@@ -62,11 +63,11 @@ page{
 .flex-item::before{
     content: '';
     position: absolute;
-    top: 30rpx;
-    right: 10rpx;
+    top: 35rpx;
+    right: 2rpx;
     z-index: -1;
     width: 160rpx;
-    height: 120rpx;
+    height: 110rpx;
     border: 1px solid #ddd;
     border-radius: 8rpx;
     background-color: #efefef;
@@ -78,20 +79,39 @@ page{
 .img image {
     width: 100%;
     height: 100%;
-    border-radius: 4rpx;
+    border: 1px solid #ddd;
+    border-radius: 8rpx;
 }
 .txt {
-    width:180rpx;
-    text-align:left;
-    font-size:26rpx;
-    margin:16rpx 0 40rpx;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    display:-webkit-box;
-    -webkit-line-clamp:2;
-    -webkit-box-orient:vertical;
-    font-weight:800;
-    align-items: flex-start;
-    justify-content: flex-start;
+    width: 190rpx;
+    text-align: left;
+    font-size: 28rpx;
+    font-weight: 800;
+    margin: 16rpx 0 40rpx;
+    color: #666;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
+.none {
+    text-align: center;
+    transform: translateY(50%);
+}
+.none-img {
+    width: 200rpx;
+    height: 200rpx;
+}
+.none-txt {
+    font-size: 50rpx;
+    color: #bfbfbf;
+}
+.none-btn {
+    width: 250rpx;
+    margin: 20rpx auto;
+}
+.mr-25 {
+    margin-right: 25rpx;
+}
